# full-stack-web-study

./: .gitignore  README.md  full-stack-web-study.code-workspace
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
backend/: .gitignore  pyproject.toml  sales_data.csv
backend/.devcontainer/: devcontainer.json
backend/api/inventory/: apps.py  authentication.py  exception.py  models.py  serializers.py  urls.py  views.py
backend/api/inventory/migrations/: 0001_initial.py  0002_rename_sales_sale.py
backend/config/: urls.py
backend/config/settings/: base.py  development.py
frontend/: .eslintrc.yml  .gitignore  next.config.js  package.json
frontend/.devcontainer/: devcontainer.json
frontend/app/inventory/: layout.tsx
frontend/app/inventory/import_sales/: page.tsx
frontend/app/inventory/products/: page.tsx  styles.module.css
frontend/app/inventory/products/[id]/: page.tsx
frontend/app/inventory/products/sample/: dummy_inventories.json  dummy_products.json
frontend/app/login/: page.tsx
frontend/lib/plugins/: axios.ts
frontend/lib/types/: Inventory.ts  Product.ts
model/: docker-compose.yml
