[tool.poetry]
name = "full-stack-web-study-backend"
authors = []
description = ""
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
django-stubs = {extras = ["mypy"], version = "^4.2.7"}
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
djangorestframework-stubs = {extras = ["mypy"], version = "^3.14.5"}
mysqlclient = "^2.2.1"
pylint-django = "^2.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
